--- a/resume.html
+++ b/resume.html
@@ -1,87 +1,199 @@
-**PROFILE**
-Entrepreneurial business leader with 20+ years of experience across all aspects of the premium cigar industry—from sales management and brand leadership to consulting for manufacturers, brand owners, and retailers. Known for sharp strategic thinking, operational excellence, and ability to drive growth, reposition brands, and lead successful market entries and exits.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Jonathan Lipson | Full Resume</title>
+  <!-- Google Fonts for Cormorant Garamond & Inter -->
+  <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="mainstyle.css">
+</head>
+<body>
+  <header>
+    <nav>
+      <div class="logo-nav">
+        <img src="images/lipson.com_alternative_super_upscale_final.png" alt="Jonathan Lipson Logo" class="logo">
+        <span class="site-title">Jonathan Lipson</span>
+      </div>
+      <ul>
+        <li><a href="cv.html">My CV</a></li>
+        <!-- mark this resume page as the current page for accessibility -->
+        <li><a href="resume.html" aria-current="page">My Full Resume</a></li>
+        <li><a href="https://www.cigarprofit.com" target="_blank" rel="noopener">The Cigar Profit</a></li>
+        <li><a href="https://www.cigarprofit.com/blog" target="_blank" rel="noopener">Insights Blog</a></li>
+      </ul>
+      <div class="social-icons">
+        <!-- Personal LinkedIn -->
+        <a href="https://www.linkedin.com/in/jonathan-lipson-7a0820114/" target="_blank" aria-label="LinkedIn Personal">
+          <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 256 256" aria-label="LinkedIn">
+            <g style="stroke: none; fill: none;" transform="scale(2.84 2.84)">
+              <path d="M 0 6.447 C 0 2.887 2.978 0 6.651 0 h 76.698 C 87.022 0 90 2.887 90 6.447 v 77.106 C 90 87.114 87.022 90 83.349 90 H 6.651 C 2.978 90 0 87.114 0 83.553 V 6.447 z" fill="#006699"/>
+              <path d="M 20.485 29.151 c 4.74 0 7.691 -3.121 7.691 -7.021 c -0.088 -3.988 -2.95 -7.022 -7.601 -7.022 c -4.65 0 -7.69 3.034 -7.69 7.022 c 0 3.9 2.95 7.021 7.512 7.021 H 20.485 L 20.485 29.151 z" fill="#fff"/>
+              <path d="M 27.282 75.339 v -40.64 H 13.688 v 40.64 H 27.282 z" fill="#fff"/>
+              <path d="M 34.804 75.339 h 13.594 V 52.644 c 0 -1.215 0.088 -2.428 0.447 -3.296 c 0.983 -2.427 3.219 -4.94 6.975 -4.94 c 4.919 0 6.887 3.727 6.887 9.19 v 21.741 h 13.592 V 52.037 c 0 -12.483 -6.706 -18.291 -15.65 -18.291 c -7.333 0 -10.553 4.073 -12.342 6.847 h 0.091 v -5.894 H 34.804 C 34.982 38.513 34.804 75.339 34.804 75.339 L 34.804 75.339 z" fill="#fff"/>
+            </g>
+          </svg>
+        </a>
+        <!-- CP Facebook -->
+        <a href="https://www.facebook.com/thecigarprofit" target="_blank" aria-label="Facebook">
+          <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 24 24" aria-label="Facebook">
+            <rect width="24" height="24" rx="4" fill="#1877F3"/>
+            <path d="M15.01 8.84h-1.17c-.13 0-.32.16-.32.37v1.02h1.49l-.19 1.48h-1.3V17h-1.63v-5.29H10.2V10.2h1.19v-.93c0-1.07.53-2.03 2.21-2.03l1.41.01v1.57z" fill="#fff"/>
+          </svg>
+        </a>
+        <!-- CP Instagram -->
+        <a href="https://www.instagram.com/cigarprofit" target="_blank" aria-label="Instagram">
+          <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 24 24" aria-label="Instagram">
+            <defs>
+              <radialGradient id="ig-gradient" cx="50%" cy="50%" r="75%">
+                <stop offset="0%" stop-color="#fdf497"/>
+                <stop offset="50%" stop-color="#fd5949"/>
+                <stop offset="100%" stop-color="#d6249f"/>
+              </radialGradient>
+            </defs>
+            <rect width="24" height="24" rx="4" fill="url(#ig-gradient)"/>
+            <circle cx="12" cy="12" r="5.2" fill="#fff"/>
+            <circle cx="18" cy="6" r="1.3" fill="#fff"/>
+          </svg>
+        </a>
+        <!-- CP X -->
+        <a href="https://x.com/cigarprofit" target="_blank" aria-label="X">
+          <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 24 24" aria-label="X">
+            <rect width="24" height="24" rx="4" fill="#191919"/>
+            <path d="M16.7 7h-1.3l-3.1 3.7L9.6 7H7l3.3 5.2L7 17h1.3l3.3-4 3.3 4H17l-3.3-5.2L17 7zm-4.4 5.1l-.4-.7-.4.7-2.2 3.4h1l1.6-2 1.6 2h1l-2.2-3.4z" fill="#fff"/>
+          </svg>
+        </a>
+        <!-- CP LinkedIn with border -->
+        <a href="https://www.linkedin.com/company/the-cigar-profit/" target="_blank" aria-label="LinkedIn – The Cigar Profit" class="linkedin-cp bordered-icon">
+          <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 256 256" aria-label="LinkedIn">
+            <g style="stroke: none; fill: none;" transform="scale(2.84 2.84)">
+              <path d="M 0 6.447 C 0 2.887 2.978 0 6.651 0 h 76.698 C 87.022 0 90 2.887 90 6.447 v 77.106 C 90 87.114 87.022 90 83.349 90 H 6.651 C 2.978 90 0 87.114 0 83.553 V 6.447 z" fill="#006699"/>
+              <path d="M 20.485 29.151 c 4.74 0 7.691 -3.121 7.691 -7.021 c -0.088 -3.988 -2.95 -7.022 -7.601 -7.022 c -4.65 0 -7.69 3.034 -7.69 7.022 c 0 3.9 2.95 7.021 7.512 7.021 H 20.485 L 20.485 29.151 z" fill="#fff"/>
+              <path d="M 27.282 75.339 v -40.64 H 13.688 v 40.64 H 27.282 z" fill="#fff"/>
+              <path d="M 34.804 75.339 h 13.594 V 52.644 c 0 -1.215 0.088 -2.428 0.447 -3.296 c 0.983 -2.427 3.219 -4.94 6.975 -4.94 c 4.919 0 6.887 3.727 6.887 9.19 v 21.741 h 13.592 V 52.037 c 0 -12.483 -6.706 -18.291 -15.65 -18.291 c -7.333 0 -10.553 4.073 -12.342 6.847 h 0.091 v -5.894 H 34.804 C 34.982 38.513 34.804 75.339 34.804 75.339 L 34.804 75.339 z" fill="#fff"/>
+            </g>
+          </svg>
+        </a>
+      </div>
+    </nav>
+  </header>
 
----
+  <main>
+    <section class="cv-profile">
+      <!-- Replicate CV heading structure: name and section label -->
+      <h1>Jonathan Lipson</h1>
+      <h2>Profile</h2>
+      <p>Entrepreneurial business leader with 20+ years of experience across all aspects of the premium cigar industry — from sales management and brand leadership to consulting for manufacturers, brand owners and retailers. Known for sharp strategic thinking, operational excellence and ability to drive growth, reposition brands and lead successful market entries and exits.</p>
+    </section>
 
-### Founder & President
+    <section class="cv-experience">
+      <h2>Experience</h2>
 
-**Ivy Edge Strategies LLC / DBA: Cigar Profit Consulting** — Remote/Nationwide
-2024 – Present
-**REDEFINING THE CIGAR BUSINESS WITH SHARP INSIGHTS, BOLD STRATEGIES, AND MODERN TOOLS**
+      <div class="cv-job">
+        <h3>Founder &amp; President, Ivy Edge Strategies LLC / DBA: Cigar Profit Consulting <span>| Remote/Nationwide | 2024–Present</span></h3>
+        <p>Redefining the cigar business with sharp insights, bold strategies and modern tools.</p>
+        <p>Provide executive-level consultancy services, guiding premium cigar brands and accessory manufacturers nationwide. Expertise spans comprehensive business strategy, market entry and exit, operational setup and high-impact branding.</p>
 
-Provide executive-level consultancy services, guiding premium cigar brands and accessory manufacturers nationwide. Expertise spans comprehensive business strategy, market entry and exit, operational setup, and high-impact branding.
+        <h4>Key Engagements</h4>
+        <ul>
+          <li>Premium Cigar Accessory Company: Strategic product testing, market strategy and launch execution for industry-changing technology.</li>
+          <li>Premium Cigar Company: End-to-end strategic consulting for new market entrants, including vendor management and comprehensive brand development.</li>
+          <li>Confidential advisory services supporting strategic market entries and exits for buyers, sellers and investors.</li>
+        </ul>
 
-**Key Engagements:**
+        <h4>Consulting Specializations</h4>
+        <ul>
+          <li>Fractional Executive Leadership (CMO/COO)</li>
+          <li>Strategic Brand &amp; Product Positioning</li>
+          <li>Market Entry, Expansion and Exit Planning</li>
+          <li>Vendor Relations and Operational Efficiency</li>
+        </ul>
 
-* Premium Cigar Accessory Company: Strategic product testing, market strategy, and launch execution for industry-changing technology.
-* Premium Cigar Company: End-to-end strategic consulting for new market entrants, including vendor management and comprehensive brand development.
-* Confidential advisory services supporting strategic market entries and exits for buyers, sellers, and investors.
+        <h4>Media &amp; Industry Thought Leadership</h4>
+        <ul>
+          <li>Featured in Cigar Aficionado, Cigar Journal, Halfwheel, Ash Quarterly and Tobacco Business Magazine.</li>
+          <li>Creator of the widely read Cigar Profit Insights blog, addressing strategic industry trends and actionable business intelligence.</li>
+          <li>Frequent guest analyst on industry panels including Cigar Jimmie and Light’em Lounge.</li>
+        </ul>
+      </div>
 
-**Consulting Specializations:**
+      <div class="cv-job">
+        <h3>Senior Brand Manager, Scandinavian Tobacco Group <span>| Richmond, VA/Remote | March 2023–June 2024</span></h3>
+        <ul>
+          <li>Developed and implemented strategic marketing plans, boosting sales performance.</li>
+          <li>Managed high-value brand marketing budgets and supplier relationships.</li>
+          <li>Oversaw targeted multi-channel campaigns, product innovation and launches.</li>
+        </ul>
+      </div>
 
-* Fractional Executive Leadership (CMO/COO)
-* Strategic Brand & Product Positioning
-* Market Entry, Expansion, and Exit Planning
-* Vendor Relations and Operational Efficiency
+      <div class="cv-job">
+        <h3>Director of Sales &amp; Marketing, Alec Bradley Cigar Company <span>| Fort Lauderdale, FL | February 2016–March 2023</span></h3>
+        <ul>
+          <li>Led comprehensive sales and marketing strategies, significantly growing brand market share.</li>
+          <li>Directed cross-channel marketing initiatives, including digital, influencer and traditional media.</li>
+          <li>Managed intellectual property protection and industry event execution.</li>
+        </ul>
+      </div>
 
-**Media & Industry Thought Leadership:**
+      <div class="cv-job">
+        <h3>Mid-Atlantic Regional Territory Manager, Alec Bradley Cigar Company <span>| February 2012–February 2016</span></h3>
+        <ul>
+          <li>Grew territory revenue to exceed $1M, setting a company milestone.</li>
+        </ul>
+      </div>
 
-* Featured in *Cigar Aficionado*, *Cigar Journal*, *Halfwheel*, *Ash Quarterly*, *Tobacco Business Magazine*
-* Creator of the widely read *Cigar Profit Insights* blog, addressing strategic industry trends and actionable business intelligence
-* Frequent guest analyst on industry panels including *Cigar Jimmie* and *Light’em Lounge*
+      <div class="cv-job">
+        <h3>Mid-Atlantic Regional Territory Manager, La Flor Dominicana Cigar Company <span>| Coral Gables, FL | October 2009–February 2012</span></h3>
+        <ul>
+          <li>Recognized consistently as top-performing salesperson.</li>
+        </ul>
+      </div>
+    </section>
 
----
+    <section class="cv-education">
+      <h2>Education</h2>
+      <div class="cv-edu-block">
+        <strong>Boston University, Questrom School of Business</strong><br>
+        BSBA, Concentration in Law | 2007
+      </div>
+    </section>
 
-### SENIOR BRAND MANAGER
+    <section class="cv-skills">
+      <h2>Skills &amp; Abilities</h2>
+      <ul class="cv-skills-list">
+        <li>Strategic Planning</li>
+        <li>Sales Leadership</li>
+        <li>ERP Systems</li>
+        <li>Adobe Creative Suite</li>
+        <li>Brand Development</li>
+        <li>B2B Consulting</li>
+        <li>CRM &amp; Marketing Tools</li>
+        <li>Microsoft Office Suite</li>
+        <li>Market Positioning</li>
+        <li>Negotiation</li>
+        <li>Wix</li>
+        <li>Python (Basic)</li>
+        <li>Team Building</li>
+        <li>AI Strategy</li>
+        <li>Inventory Management</li>
+        <li>Client Relations</li>
+      </ul>
+    </section>
+  </main>
 
-**Scandinavian Tobacco Group, Richmond, VA | Remote **
-March 2023 – June 2024
+  <section id="contact">
+    <h2>Contact</h2>
+    <form action="https://formsubmit.co/admin@jonathanlipson.com" method="POST">
+      <input type="text" name="name" placeholder="Your Name" required>
+      <input type="email" name="email" placeholder="Your Email" required>
+      <textarea name="message" rows="4" placeholder="Your Message" required></textarea>
+      <button type="submit">Send Message</button>
+    </form>
+  </section>
 
-* Developed and implemented strategic marketing plans, boosting sales performance
-* Managed high-value brand marketing budgets and supplier relationships
-* Oversaw targeted multi-channel campaigns, product innovation, and launches
-
----
-
-### DIRECTOR OF SALES & MARKETING
-
-**Alec Bradley Cigar Company, Fort Lauderdale, FL**
-February 2016 – March 2023
-
-* Led comprehensive sales and marketing strategies, significantly growing brand market share
-* Directed cross-channel marketing initiatives, including digital, influencer, and traditional media
-* Managed intellectual property protection and industry event execution
-
----
-
-### MID-ATLANTIC REGIONAL TERRITORY MANAGER
-
-**Alec Bradley Cigar Company**
-February 2012 – February 2016
-
-* Grew territory revenue to exceed \$1M, setting a company milestone
-
----
-
-### MID-ATLANTIC REGIONAL TERRITORY MANAGER
-
-**La Flor Dominicana Cigar Company, Coral Gables, FL**
-October 2009 – February 2012
-
-* Recognized consistently as top-performing salesperson
-
----
-
-**EDUCATION**
-**BSBA, Concentration in Law**
-Boston University, Questrom School of Business, 2007
-
----
-
-**SKILLS & ABILITIES**
-
-| • Strategic Planning | • Sales Leadership | • ERP Systems           | • Adobe Creative Suite   |
-| -------------------- | ------------------ | ----------------------- | ------------------------ |
-| • Brand Development  | • B2B Consulting   | • CRM & Marketing Tools | • Microsoft Office Suite |
-| • Market Positioning | • Negotiation      | • Wix                   | • Python (Basic)         |
-| • Team Building      | • AI Strategy      | • Inventory Management  | • Client Relations       |
+  <footer>
+    <p>&copy; 2025 Jonathan Lipson. All rights reserved.</p>
+  </footer>
+</body>
+</html>
