--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@
 <nav>
 <div class="logo-nav">
 <img alt="Jonathan Lipson Logo" class="logo" src="images/lipson.com_alternative_super_upscale_final.png"/>
-<span class="site-title"><a href="main.html" title="Return Home">Jonathan Lipson</a></span>
+<span class="site-title"><a href="index.html" title="Return Home">Jonathan Lipson</a></span>
 </div>
 <ul>
 <li><a href="cv.html">My CV</a></li>
