--- a/index.html
+++ b/index.html
@@ -1,164 +1,37 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1" name="viewport"/>
-<title>Jonathan Lipson | Executive Consultant</title>
-<meta content="Executive consultant in the premium cigar industry. Strategy, brand positioning, market entry and exits for manufacturers, brand owners and retailers." name="description"/>
-<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
-<link as="style" href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&amp;family=Inter:wght@400;600;700&amp;display=swap" rel="preload"/>
-<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&amp;family=Inter:wght@400;600;700&amp;display=swap" rel="stylesheet"/>
-<link href="site.css" rel="stylesheet"/>
-<link href="images/favicon-32.png" rel="icon" sizes="32x32" type="image/png"/>
-<link href="images/apple-touch-icon.png" rel="apple-touch-icon"/>
-<meta content="website" property="og:type"/>
-<meta content="Jonathan Lipson | Executive Consultant" property="og:title"/>
-<meta content="Executive consultant in the premium cigar industry. Strategy, brand positioning, market entry and exits for manufacturers, brand owners and retailers." property="og:description"/>
-<meta content="https://www.jonathanlipson.com/" property="og:url"/>
-<meta content="images/og-banner-1200x630-v4.jpg" property="og:image"/>
-<meta content="summary_large_image" name="twitter:card"/>
-<meta content="Jonathan Lipson | Executive Consultant" name="twitter:title"/>
-<meta content="Executive consultant in the premium cigar industry. Strategy, brand positioning, market entry and exits for manufacturers, brand owners and retailers." name="twitter:description"/>
-<meta content="images/og-banner-1200x630-v4.jpg" name="twitter:image"/>
-<!-- Google tag (gtag.js) -->
-<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-5X8BYDC9BM"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-5X8BYDC9BM');
-  </script>
-<link href="/rss.xml" rel="alternate" title="Jonathan Lipson — Insights" type="application/rss+xml"/></head>
-<body id="top">
-<header>
-<nav class="header-grid">
-<div class="logo-nav">
-<picture>
-<source srcset="images/logo.webp" type="image/webp"/>
-<img alt="Jonathan Lipson JL logo" class="logo" src="images/lipson.com_alternative_super_upscale_final.png"/>
-</picture>
-<span class="site-title"><a href="index.html" title="Return Home">Jonathan Lipson</a></span>
-</div>
-<ul class="primary-links">
-<li><a href="cv.html">My CV</a></li>
-<li><a href="resume.html">My Full Resume</a></li>
-<li><a href="https://www.cigarprofit.com" rel="noopener" target="_blank">The Cigar Profit</a></li>
-<li><a href="https://www.cigarprofit.com/blog" rel="noopener" target="_blank">Insights Blog</a></li>
-</ul>
-<div class="social-icons">
-<a aria-label="LinkedIn Personal" href="https://www.linkedin.com/in/jonathan-lipson-7a0820114/" target="_blank">
-<svg aria-label="LinkedIn icon" height="26" role="img" viewbox="0 0 256 256" width="26" xmlns="http://www.w3.org/2000/svg">
-<g style="stroke: none; fill: none;" transform="scale(2.84 2.84)">
-<path d="M 0 6.447 C 0 2.887 2.978 0 6.651 0 h 76.698 C 87.022 0 90 2.887 90 6.447 v 77.106 C 90 87.114 87.022 90 83.349 90 H 6.651 C 2.978 90 0 87.114 0 83.553 V 6.447 z" fill="#006699"></path>
-<path d="M 20.485 29.151 c 4.74 0 7.691 -3.121 7.691 -7.021 c -0.088 -3.988 -2.95 -7.022 -7.601 -7.022 c -4.65 0 -7.69 3.034 -7.69 7.022 c 0 3.9 2.95 7.021 7.512 7.021 H 20.485 L 20.485 29.151 z" fill="#fff"></path>
-<path d="M 27.282 75.339 v -40.64 H 13.688 v 40.64 H 27.282 z" fill="#fff"></path>
-<path d="M 34.804 75.339 h 13.594 V 52.644 c 0 -1.215 0.088 -2.428 0.447 -3.296 c 0.983 -2.427 3.219 -4.94 6.975 -4.94 c 4.919 0 6.887 3.727 6.887 9.19 v 21.741 h 13.592 V 52.037 c 0 -12.483 -6.706 -18.291 -15.65 -18.291 c -7.333 0 -10.553 4.073 -12.342 6.847 h 0.091 v -5.894 H 34.804 C 34.982 38.513 34.804 75.339 34.804 75.339 L 34.804 75.339 z" fill="#fff"></path>
-</g>
-</svg>
-</a>
-<a aria-label="Facebook" href="https://www.facebook.com/thecigarprofit" target="_blank">
-<svg aria-label="Facebook icon" height="26" role="img" viewbox="0 0 24 24" width="26" xmlns="http://www.w3.org/2000/svg">
-<rect fill="#1877F3" height="24" rx="4" width="24"></rect>
-<path d="M15.01 8.84h-1.17c-.13 0-.32.16-.32.37v1.02h1.49l-.19 1.48h-1.3V17h-1.63v-5.29H10.2V10.2h1.19v-.93c0-1.07.53-2.03 2.21-2.03l1.41.01v1.57z" fill="#fff"></path>
-</svg>
-</a>
-<a aria-label="Instagram" href="https://www.instagram.com/cigarprofit" target="_blank">
-<svg aria-label="Instagram icon" height="26" role="img" viewbox="0 0 24 24" width="26" xmlns="http://www.w3.org/2000/svg">
-<defs>
-<radialgradient cx="50%" cy="50%" id="ig-gradient" r="75%">
-<stop offset="0%" stop-color="#fdf497"></stop>
-<stop offset="50%" stop-color="#fd5949"></stop>
-<stop offset="100%" stop-color="#d6249f"></stop>
-</radialgradient>
-</defs>
-<rect fill="url(#ig-gradient)" height="24" rx="4" width="24"></rect>
-<circle cx="12" cy="12" fill="#fff" r="5.2"></circle>
-<circle cx="18" cy="6" fill="#fff" r="1.3"></circle>
-</svg>
-</a>
-<a aria-label="X" href="https://x.com/cigarprofit" target="_blank">
-<svg aria-label="X icon" height="26" role="img" viewbox="0 0 24 24" width="26" xmlns="http://www.w3.org/2000/svg">
-<rect fill="#191919" height="24" rx="4" width="24"></rect>
-<path d="M16.7 7h-1.3l-3.1 3.7L9.6 7H7l3.3 5.2L7 17h1.3l3.3-4 3.3 4H17l-3.3-5.2L17 7zm-4.4 5.1l-.4-.7-.4.7-2.2 3.4h1l1.6-2 1.6 2h1l-2.2-3.4z" fill="#fff"></path>
-</svg>
-</a>
-<a aria-label="LinkedIn – The Cigar Profit" class="linkedin-cp bordered-icon" href="https://www.linkedin.com/company/the-cigar-profit/" target="_blank">
-<svg aria-label="LinkedIn icon" height="26" role="img" viewbox="0 0 256 256" width="26" xmlns="http://www.w3.org/2000/svg">
-<g style="stroke: none; fill: none;" transform="scale(2.84 2.84)">
-<path d="M 0 6.447 C 0 2.887 2.978 0 6.651 0 h 76.698 C 87.022 0 90 2.887 90 6.447 v 77.106 C 90 87.114 87.022 90 83.349 90 H 6.651 C 2.978 90 0 87.114 0 83.553 V 6.447 z" fill="#006699"></path>
-<path d="M 20.485 29.151 c 4.74 0 7.691 -3.121 7.691 -7.021 c -0.088 -3.988 -2.95 -7.022 -7.601 -7.022 c -4.65 0 -7.69 3.034 -7.69 7.022 c 0 3.9 2.95 7.021 7.512 7.021 H 20.485 L 20.485 29.151 z" fill="#fff"></path>
-<path d="M 27.282 75.339 v -40.64 H 13.688 v 40.64 H 27.282 z" fill="#fff"></path>
-<path d="M 34.804 75.339 h 13.594 V 52.644 c 0 -1.215 0.088 -2.428 0.447 -3.296 c 0.983 -2.427 3.219 -4.94 6.975 -4.94 c 4.919 0 6.887 3.727 6.887 9.19 v 21.741 h 13.592 V 52.037 c 0 -12.483 -6.706 -18.291 -15.65 -18.291 c -7.333 0 -10.553 4.073 -12.342 6.847 h 0.091 v -5.894 H 34.804 C 34.982 38.513 34.804 75.339 34.804 75.339 L 34.804 75.339 z" fill="#fff"></path>
-</g>
-</svg>
-</a>
-</div>
-</nav>
-</header>
-<main>
-<section class="hero">
-<picture>
-<source srcset="images/portrait.webp" type="image/webp"/>
-<img alt="Portrait of Jonathan Lipson in suit" class="portrait" height="180" src="images/lipson_business_suit.jpg" width="180"/>
-</picture>
-<div class="hero-text">
-<h1>Jonathan Lipson</h1>
-<h2>Redefining the cigar business with sharp insights, bold strategies and modern tools.</h2>
-<p>Entrepreneurial consultant, executive leader and brand strategist serving the premium cigar industry and aligned sectors. Guiding manufacturers, brand owners and retailers through market entry, repositioning and successful exits.</p>
-<h2>Open to consulting partnerships within the premium cigar industry and full-time opportunities.</h2>
-</div>
-</section>
-<section class="actions">
-<a class="cta-btn" href="cv.html">View My CV</a>
-<a class="cta-btn" href="resume.html">View Full Resume</a>
-</section>
-
-<section class="cv-profile" id="insights-teaser" style="margin-top:1.4rem">
-<h2>Insights</h2>
-<p>Short, useful reads for brand leaders and operators.</p>
-<p><a class="cta-btn" href="/insights/">Read Insights</a></p>
-</section>
-</main>
-<section id="contact">
-<h2>Contact</h2>
-<form action="https://formsubmit.co/admin@jonathanlipson.com" method="POST"><input name="_honey" style="display:none" type="text"/>
-<input name="_subject" type="hidden" value="Website Inquiry from JonathanLipson.com"/>
-<input name="name" placeholder="Your Name" required="" type="text"/>
-<input name="email" placeholder="Your Email" required="" type="email"/>
-<textarea name="message" placeholder="Your Message" required="" rows="4"></textarea>
-<button type="submit">Send Message</button>
-<input name="_next" type="hidden" value="https://www.jonathanlipson.com/#contact"/></form>
-</section>
-<footer>
-<p>© 2025 Jonathan Lipson. All rights reserved. <a href="terms.html">Terms &amp; Privacy</a> · <a href="sitemap.xml">Sitemap</a></p>
-</footer>
-<a aria-label="Back to top" class="back-to-top" href="#top">
-<img alt="Back to top icon" loading="lazy" src="images/back_to_top_svgrepo_com.svg"/>
-</a>
-<script>
-    const btt = document.querySelector('.back-to-top');
-    function toggleBtt(){ if(window.scrollY > 200){ btt.style.display='flex'; } else { btt.style.display='none'; } }
-    window.addEventListener('scroll', toggleBtt); toggleBtt();
-  </script>
-<script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Person",
-    "name": "Jonathan Lipson",
-    "jobTitle": "Executive Consultant",
-    "url": "https://www.jonathanlipson.com/",
-    "image": "images/portrait.webp",
-    "sameAs": [
-      "https://www.linkedin.com/in/jonathan-lipson-7a0820114/",
-      "https://www.cigarprofit.com"
-    ],
-    "worksFor": {
-      "@type": "Organization",
-      "name": "The Cigar Profit",
-      "url": "https://www.cigarprofit.com"
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Jonathan Lipson | Coming Soon</title>
+  <meta name="robots" content="noindex, nofollow">
+  <meta name="description" content="Jonathan Lipson — site update in progress. Check back soon.">
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    :root { --gold:#84754e; --emerald:#1e6842; --bg1:#fffaf2; --bg2:#f3eee3; }
+    html, body { height:100%; margin:0; }
+    body {
+      font-family: Inter, Arial, sans-serif;
+      background: linear-gradient(120deg, var(--bg1) 65%, var(--bg2) 100%);
+      color:#191919;
+      display:flex; align-items:center; justify-content:center;
     }
-  }
-  </script>
+    .wrap { text-align:center; padding:2rem; }
+    h1 { font-family: "Cormorant Garamond", serif; color: var(--emerald); font-size:2.4rem; margin:0 0 .5rem 0; letter-spacing:2px; }
+    p { margin:.4rem 0; font-size:1.05rem; }
+    .tag { color: var(--gold); font-weight:600; }
+    .cta { display:inline-block; margin-top:1rem; padding:.7rem 1.4rem; background: var(--emerald); color:#fff; text-decoration:none; border-radius:999px; font-weight:700; }
+    .cta:hover { background: var(--gold); color: var(--emerald); }
+    footer { position:fixed; bottom:10px; width:100%; text-align:center; color:#666; font-size:.92rem; }
+  </style>
+</head>
+<body>
+  <div class="wrap">
+    <h1>Jonathan Lipson</h1>
+    <p class="tag">Site update in progress</p>
+    <p>Thanks for your patience. Come back soon.</p>
+    <p><a class="cta" href="mailto:admin@jonathanlipson.com">Contact</a></p>
+  </div>
+  <footer>&copy; 2025 Jonathan Lipson</footer>
 </body>
 </html>
