--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 </main>
 <section id="contact">
 <h2>Contact</h2>
-<form action="https://formsubmit.co/admin@jonathanlipson.com" method="POST"><input name="_honey" style="display:none" type="text"/>
+<form action="https://formsubmit.co/" method="POST"><input name="_honey" style="display:none" type="text"/>
 <input name="_subject" type="hidden" value="Website Inquiry from JonathanLipson.com"/>
 <input name="name" placeholder="Your Name" required="" type="text"/>
 <input name="email" placeholder="Your Email" required="" type="email"/>
