--- a/resume.html
+++ b/resume.html
@@ -174,7 +174,7 @@
 </main>
 <section id="contact">
 <h2>Contact</h2>
-<form action="https://formsubmit.co/admin@jonathanlipson.com" method="POST">
+<form action="https://formsubmit.co/method="POST">
 <input name="name" placeholder="Your Name" required="" type="text"/>
 <input name="email" placeholder="Your Email" required="" type="email"/>
 <textarea name="message" placeholder="Your Message" required="" rows="4"></textarea>
