--- a/cv.html
+++ b/cv.html
@@ -28,7 +28,7 @@
 </ul>
 <div class="social-icons">
 <!-- Personal LinkedIn -->
-<a aria-label="LinkedIn Personal" href="https://www.linkedin.com/in/jonathan-lipson-7a0820114/" target="_blank">
+<a aria-label="LinkedIn Personal" href="https://tinyurl.com/3acmke9m" target="_blank">
 <svg aria-label="LinkedIn" height="26" viewbox="0 0 256 256" width="26" xmlns="http://www.w3.org/2000/svg">
 <g style="stroke: none; fill: none;" transform="scale(2.84 2.84)">
 <path d="M 0 6.447 C 0 2.887 2.978 0 6.651 0 h 76.698 C 87.022 0 90 2.887 90 6.447 v 77.106 C 90 87.114 87.022 90 83.349 90 H 6.651 C 2.978 90 0 87.114 0 83.553 V 6.447 z" fill="#006699"></path>
@@ -39,14 +39,14 @@
 </svg>
 </a>
 <!-- CP Facebook -->
-<a aria-label="Facebook" href="https://www.facebook.com/thecigarprofit" target="_blank">
+<a aria-label="Facebook" href="https://tinyurl.com/7rvkhntu" target="_blank">
 <svg aria-label="Facebook" height="26" viewbox="0 0 24 24" width="26" xmlns="http://www.w3.org/2000/svg">
 <rect fill="#1877F3" height="24" rx="4" width="24"></rect>
 <path d="M15.01 8.84h-1.17c-.13 0-.32.16-.32.37v1.02h1.49l-.19 1.48h-1.3V17h-1.63v-5.29H10.2V10.2h1.19v-.93c0-1.07.53-2.03 2.21-2.03l1.41.01v1.57z" fill="#fff"></path>
 </svg>
 </a>
 <!-- CP Instagram -->
-<a aria-label="Instagram" href="https://www.instagram.com/cigarprofit" target="_blank">
+<a aria-label="Instagram" href="https://tinyurl.com/2ksjwmac" target="_blank">
 <svg aria-label="Instagram" height="26" viewbox="0 0 24 24" width="26" xmlns="http://www.w3.org/2000/svg">
 <defs>
 <radialgradient cx="50%" cy="50%" id="ig-gradient" r="75%">
@@ -61,14 +61,14 @@
 </svg>
 </a>
 <!-- CP X -->
-<a aria-label="X" href="https://x.com/cigarprofit" target="_blank">
+<a aria-label="X" href="https://tinyurl.com/4fvjj4zv" target="_blank">
 <svg aria-label="X" height="26" viewbox="0 0 24 24" width="26" xmlns="http://www.w3.org/2000/svg">
 <rect fill="#191919" height="24" rx="4" width="24"></rect>
 <path d="M16.7 7h-1.3l-3.1 3.7L9.6 7H7l3.3 5.2L7 17h1.3l3.3-4 3.3 4H17l-3.3-5.2L17 7zm-4.4 5.1l-.4-.7-.4.7-2.2 3.4h1l1.6-2 1.6 2h1l-2.2-3.4z" fill="#fff"></path>
 </svg>
 </a>
 <!-- CP LinkedIn with border -->
-<a aria-label="LinkedIn – The Cigar Profit" class="linkedin-cp bordered-icon" href="https://www.linkedin.com/company/the-cigar-profit/" target="_blank">
+<a aria-label="LinkedIn – The Cigar Profit" class="linkedin-cp bordered-icon" href="https://tinyurl.com/2vux4d8r" target="_blank">
 <svg aria-label="LinkedIn" height="26" viewbox="0 0 256 256" width="26" xmlns="http://www.w3.org/2000/svg">
 <g style="stroke: none; fill: none;" transform="scale(2.84 2.84)">
 <path d="M 0 6.447 C 0 2.887 2.978 0 6.651 0 h 76.698 C 87.022 0 90 2.887 90 6.447 v 77.106 C 90 87.114 87.022 90 83.349 90 H 6.651 C 2.978 90 0 87.114 0 83.553 V 6.447 z" fill="#006699"></path>
