--- a/terms.html
+++ b/terms.html
@@ -56,9 +56,9 @@
 <h2>Cookies</h2>
 <p>Google Analytics may set cookies to measure site usage. You can block cookies in your browser settings.</p>
 <h2>Your Rights</h2>
-<p>If you submitted the contact form you may request a copy of your message or ask us to delete it by emailing <a href="mailto:</a>.</p>
+<p>If you submitted the contact form you may request a copy of your message or ask us to delete it by submitting a request through the contact form.</p>
 <h2>Contact</h2>
-<p>Questions about these terms or privacy practices can be sent to <a href="mailto:"></a>.</p>
+<p>Questions about these terms or privacy practices can be requested via a contact form submission.</p>
 </main>
 <footer>
 <p>© 2025 Jonathan Lipson. All rights reserved. <a href="sitemap.xml">Sitemap</a></p>
